...
            android:textSize="@dimen/text_size_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNewComics"
            style="@style/marvel_text"
            android:layout_width="@dimen/size_140"
            android:layout_height="@dimen/size_50"
            android:adjustViewBounds="true"
            android:background="@drawable/gem_red"
            android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReaderComics"
            style="@style/marvel_text"
            android:layout_width="@dimen/size_140"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="@dimen/margin_64"
            android:adjustViewBounds="true"
            android:background="@drawable/gem_green"
...
