...

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/resume_comics_summary"
                    style="@style/resume_marvel_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
...
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/text_start_qr_reader" />

            <Button
                android:id="@+id/btnStartReader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_16"
                android:layout_gravity="center"
                android:text="@string/text_reader_qr_button"/>

...
