...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.MainFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack60"
            app:items="@{characters}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
