...
    <string name="title_toolbar_reader">QR Comics</string>
    <string name="text_start_qr_reader">Usa el lector con los QR generados por la aplicación.</string>
    <string name="text_reader_qr_button">Lector QR</string>
    <string name="text_alert_title_permission_camera">Permiso Cámara</string>
    <string name="text_alert_message_permission_camera">Necesitas habilitar el permiso desde la configuración de la aplicación.</string>
    <string name="text_alert_positive_button_permission_camera">Configuración</string>
    <string name="common_canceled_scan_qr">Lector QR Cancelado</string>
    <string name="common_error_scan_qr">QR Incorrecto</string>
    <string name="common_scan_qr">QR Correcto</string>


</resources>
